k8s-yaml/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
        - name: poi
          image: registryktt4522.azurecr.io/poi:1.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
