k8s-yaml/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
        - name: trips
          image: registryktt4522.azurecr.io/trips:1.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
