k8s-yaml/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
        - name: user-java
          image: registryktt4522.azurecr.io/user-java:1.1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
