k8s-yaml/userprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
        - name: userprofile
          image: registryktt4522.azurecr.io/userprofile:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: kv-secrets-vol
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: kv-secrets-vol
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "sql-kv-secret"
