k8s-yaml/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: poi
