k8s-yaml/trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: trips
