k8s-yaml/user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: user-java
