k8s-yaml/userprofile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: userprofile
